# twin-gpt

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  debugger.py  infer_instruct.py  inference.py  pyproject.toml  train.py  train_instruct.py
scripts/: generate.py
twin-gpt/data/: text_datamodule.py
twin_gpt/: train_module.py
twin_gpt/data/: text_datamodule.py
twin_gpt/dataset/: instruct_datamodule.py  text_datamodule.py
twin_gpt/models/: gpt_model.py  lit_gpt.py
