[project]
name = "twin_gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "intisar",email = "intisarcs@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lightning (>=2.5.5,<3.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "wandb (>=0.22.0,<0.23.0)",
    "weave (>=0.52.8,<0.53.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
